Fixes results to single line with ellipsis overflow

--- a/client/my-sites/customer-home/cards/features/support/style.scss
+++ b/client/my-sites/customer-home/cards/features/support/style.scss
@@ -5,7 +5,10 @@
 		justify-content: space-between;
 	}
 
-
+	.support__search {
+		// Don't allow ellipsis items to flow outside box
+		width: 100%;
+	}
 
 	.search-card {
 		margin: 0;
@@ -56,6 +59,10 @@
 
 	.support__results-item {
 		margin: 0;
+		display: flex;
+
+
+
 		// font-size: 14px;
 
 		@include breakpoint-deprecated( '>660px' ) {
@@ -65,17 +72,25 @@
 
 		a {
 			//color: var( --color-primary );
-			text-decoration: underline;
 			font-weight: normal;
 			line-height: 1.4;
 			display: block;
 			padding: 8px 16px;
+
+
+			flex: 1;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+
 
 			&:hover {
 				cursor: pointer;
 				//color: var( --color-primary );
 				background: var( --color-neutral-0 );
 			}
+
+
 		}
 
 		&.is-selected {
